--- a/Proposal/chapter3.tex
+++ b/Proposal/chapter3.tex
@@ -1,5 +1,5 @@
 % !TeX root = proposal.tex
-\chapter{Work Completed}
+\chapter{Recommending Privacy Preference for General IoT}
 In this chapter, we present the work completed to date in the areas of designing for privacy for general IoT and Household IoT.
 
 \section{A Data-Driven Approach to Developing IoT Privacy-Setting Interfaces}
@@ -79,58 +79,57 @@ For every scenario, participants were asked a total of 9 questions. Our study fo
 	\end{tabular}
 \end{table*}
 
-
-
+\subsection{Inspecting users' behaviors}
 In this section we analyze how users' behavioral intentions to allow or reject the information collection described in the scenario are influenced by the scenario parameters. In line with classic attitude-behavior models~\cite{ajzen1977attitude}, we also investigate whether users' attitudes regarding the scenario---their judgment of risk, comfort, and appropriateness---mediate these effects. This mediation analysis~\cite{baron1986moderator} involves the following test:
 \begin{itemize}
-\item \textbf{Test 1:} The effect of the scenario parameters (who, what, where, reason, persistence) on participants' attitudes (risk, comfort, appropriateness).
-\item \textbf{Test 2:} The effect of participants' attitudes on their behavioral intentions (the allow/reject decision).
-\item \textbf{Test 3:}  The effect of the parameters on behavioral intentions, controlling for attitudes.
+	\item \textbf{Test 1:} The effect of the scenario parameters (who, what, where, reason, persistence) on participants' attitudes (risk, comfort, appropriateness).
+	\item \textbf{Test 2:} The effect of participants' attitudes on their behavioral intentions (the allow/reject decision).
+	\item \textbf{Test 3:}  The effect of the parameters on behavioral intentions, controlling for attitudes.
 \end{itemize}
 
 If tests 1 and 2 are significant, and test 3 reveals a substantial reduction in conditional direct effect (compared to the marginal effect), then we can say that the effects of the scenario parameters on participants' behavioral intention are mediated by their attitudes. Moreover, if the conditional direct effect is (close to) zero, then the effects are fully (rather than partially) mediated.
 
-\subsection{Scenario Parameters and Attitude}\label{subsec:attitude}
-\subsubsection{ANOVA Test of Main Effects}
+\subsubsection{Scenario Parameters and Attitude}\label{subsec:attitude}
+\textbf{ANOVA Test of Main Effects: }
 To understand the effect of the scenario parameters on participants' attitudes, we created a separate \textit{linear mixed effects regression} (\textit{lmer}) model with a random intercept (to account for repeated measures on the same participant) for each dependent variable (risk, comfort, appropriateness), using the scenario parameters as independent variables. We employed a forward stepwise procedure, adding the strongest remaining parameter into the model at each step and comparing it against the previous model. Table~\ref{tab:anovaEffect} shows that all parameters except \textbf{where} have a significant effect on each of the attitudes.
 
-\subsubsection{Post-hoc Comparisons}
+\textbf{Post-hoc Comparisons: }
 We also conducted Tukey post hoc analyses to better understand how the various values of each parameter influenced the attitudes. \textbf{Where} was excluded from these analyses, as it did not have an overall significant effect. Some key findings of these post hoc analyses are:
 
 \begin{table}
-\centering
-\caption{Effect of scenario on attitudes. Each model builds upon and is tested against the previous.}
-\label{tab:anovaEffect}
-\begin{tabular}{ l | r | r | r}
-\hline
-Model &	$\chi^2$ &	$df$ & $p$-value \\ \hline
-$risk\sim(1|sid)$ &				 &			 &						\\
-+who &				315.37 &	6 &			$<$ .0001 		\\
-+what &			67.74 &		23 &		$<$ .0001 		\\
-+reason & 			15.65 &		5 &		.0079 			\\
-+persistence &		9.95 &		1 &		.0016 			\\
-+where	&			7.47 &		3 &		.0586 			\\
-+who:what &		166.47 &	138 &	.0050			\\
-\hline
-Model &	$\chi^2$ &	$df$ & $p$-value \\ \hline
-$comfort\sim(1|sid)$ & 			 &			&	 					\\
-+who &				334.06 &	6 &			$<$ .0001 		\\
-+what &			83.24 &		23 &		$<$ .0001 		\\
-+reason &			18.68 &		5 &			.0022 		\\
-+persistence &		14.73 &		1 &			.0001 		\\
-+where &			3.25 &		3 &			.3544 		\\
-+who:what &		195.07 &	138 &		.0001			\\
-\hline
-Model &	$\chi^2$ &	$df$ & $p$-value \\ \hline
-$appropriateness\sim(1|sid)$ &	 &		 &						\\
-+who &				315.77 &	6 &			$<$ .0001 		\\
-+what &			72.87 &		23 &		$<$ .0001 		\\
-+reason &			23.27 &		5 &			.0003 		\\
-+persistence &		8.97 &		1 &			.0027 		\\
-+where &			5.46 &		3 &			.1411 		\\
-+who:what &		214.61 &	138 &		$<$ .0001			\\
-\hline
-\end{tabular}
+	\centering
+	\caption{Effect of scenario on attitudes. Each model builds upon and is tested against the previous.}
+	\label{tab:anovaEffect}
+	\begin{tabular}{ l | r | r | r}
+		\hline
+		Model &	$\chi^2$ &	$df$ & $p$-value \\ \hline
+		$risk\sim(1|sid)$ &				 &			 &						\\ 
+		+who &				315.37 &	6 &			$<$ .0001 		\\ 
+		+what &			67.74 &		23 &		$<$ .0001 		\\ 
+		+reason & 			15.65 &		5 &		.0079 			\\ 
+		+persistence &		9.95 &		1 &		.0016 			\\ 
+		+where	&			7.47 &		3 &		.0586 			\\ 
+		+who:what &		166.47 &	138 &	.0050			\\
+		\hline
+		Model &	$\chi^2$ &	$df$ & $p$-value \\ \hline
+		$comfort\sim(1|sid)$ & 			 &			&	 					\\
+		+who &				334.06 &	6 &			$<$ .0001 		\\
+		+what &			83.24 &		23 &		$<$ .0001 		\\
+		+reason &			18.68 &		5 &			.0022 		\\
+		+persistence &		14.73 &		1 &			.0001 		\\
+		+where &			3.25 &		3 &			.3544 		\\ 
+		+who:what &		195.07 &	138 &		.0001			\\
+		\hline
+		Model &	$\chi^2$ &	$df$ & $p$-value \\ \hline
+		$appropriateness\sim(1|sid)$ &	 &		 &						\\
+		+who &				315.77 &	6 &			$<$ .0001 		\\
+		+what &			72.87 &		23 &		$<$ .0001 		\\
+		+reason &			23.27 &		5 &			.0003 		\\
+		+persistence &		8.97 &		1 &			.0027 		\\
+		+where &			5.46 &		3 &			.1411 		\\
+		+who:what &		214.61 &	138 &		$<$ .0001			\\ 
+		\hline
+	\end{tabular}
 \end{table}
 
 \textbf{Who:} Participants perceive more \emph{risk} when the recipient of the information is `unknown' than for any other recipient ($d$ range = [0.640, 1.450] and all $p$s~$<$~.001, except for `government': $d=0.286$, $p < .05$). `Government' is the next most risky recipient ($d$ range = [0.440, 1.190], all $p$s~$<$~.001). Participants consider their `own device' the least risky ($d$ range = [0.510, 1.450], all $p$s~$<$~.001). Similar patterns were found for \emph{comfort} and \emph{appropriateness}.
@@ -141,71 +140,71 @@ $appropriateness\sim(1|sid)$ &	 &		 &						\\
 
 \textbf{What:} This parameter has a large number of values, so we decided to selectively test planned contrasts instead of post-hoc tests. We first compared different mediums (voice, photo, video) regardless of what is being inferred:
 \begin{itemize}
-\item Participants were significantly more \emph{comfortable} with `voice' than `video' ($d = 0.260$, $p = .005$), and found `voice' less \emph{risky} ($d = -0.239$, $p = .005$) and more \emph{appropriate} ($d = 0.217$, $p = .015$) than `video'.
-\item Participants were significantly more \emph{comfortable} with `voice' than `photo' ($d=0.201$, $p = .007$) and found `voice' more \emph{appropriate} than `photo' ($d = 0.157$, $p$~$=$~$.028$). There was no significant difference in terms of \emph{risk} ($p = .118$).
-\item No differences were found between `photo' and `video' in terms of \emph{risk} ($p = .24$), \emph{comfort} ($p = .35$) and \emph{appropriateness} ($p = .26$).
+	\item Participants were significantly more \emph{comfortable} with `voice' than `video' ($d = 0.260$, $p = .005$), and found `voice' less \emph{risky} ($d = -0.239$, $p = .005$) and more \emph{appropriate} ($d = 0.217$, $p = .015$) than `video'.
+	\item Participants were significantly more \emph{comfortable} with `voice' than `photo' ($d=0.201$, $p = .007$) and found `voice' more \emph{appropriate} than `photo' ($d = 0.157$, $p$~$=$~$.028$). There was no significant difference in terms of \emph{risk} ($p = .118$).
+	\item No differences were found between `photo' and `video' in terms of \emph{risk} ($p = .24$), \emph{comfort} ($p = .35$) and \emph{appropriateness} ($p = .26$).
 \end{itemize}
 
 We also compared different inferences (e.g. age, gender, mood, identity) across mediums. The following planned contrasts were significant (all others were not):
 \begin{itemize}
-\item Participants were significantly more \emph{comfortable} ($d$~$=$~$0.363$, $p = .028$) and found it more \emph{appropriate} ($d = 0.371$, $p = .018$) to reveal their `age' rather than their `identity'.
-\item Participants were significantly more \emph{comfortable} ($d$~$=$~$0.363$, $p= .008$) and found it more \emph{appropriate} ($d = 0.308$, $p = .024$) to reveal their `presence' rather than their `identity'.
+	\item Participants were significantly more \emph{comfortable} ($d$~$=$~$0.363$, $p = .028$) and found it more \emph{appropriate} ($d = 0.371$, $p = .018$) to reveal their `age' rather than their `identity'.
+	\item Participants were significantly more \emph{comfortable} ($d$~$=$~$0.363$, $p= .008$) and found it more \emph{appropriate} ($d = 0.308$, $p = .024$) to reveal their `presence' rather than their `identity'. 
 \end{itemize}
 
-\subsubsection{Interaction effects}
+\textbf{Interaction effects: }
 We also checked for two-way interactions between the scenario parameters. The only significant interaction effect observed was between \textbf{who} and \textbf{what}. The last line of each section in Table~\ref{tab:anovaEffect} shows the results of adding this interaction to the model. Due to space concerns, we choose not to address the post-hoc analysis of the $7 * 24 = 168$ specific combinations of who and what.
 
-\subsection{Attitude and Behavioral intention}
+\subsubsection{Attitude and Behavioral intention}
 To test the effects of participants' attitudes on their allow/reject decision, we ran a \emph{generalized linear mixed effects regression} (\emph{glmer}) with a random intercept and a logit link function to account for the binary dependent variable.
 We found significant effects of all the three attitudes on participants' allow/reject decision (see Table~\ref{tab:mediationANOVA}). Each 1-point increase in \textbf{risk} results in a 4.04-fold decrease in the odds that the scenario will be allowed ($p < .0001$). Each 1-point increase in \textbf{comfort} results in a 5.04-fold increase ($p < .0001$), and each 1-point increase in \textbf{appropriateness} results in a 3.47-fold increase ($p < .0001$).
 
-\subsection{Mediation Analysis}
+\textbf{Mediation Analysis: }
 The bottom half of Table~\ref{tab:mediationANOVA} shows the \emph{conditional} effects of the significant parameters (who, what, reason, persistance) on participants' allow/reject decision, controlling for attitude. \textbf{Who} and \textbf{what} are no longer significant; these effects are thus fully mediated by attitude. The effects of \textbf{reason} and \textbf{persistance} are still significant, but smaller than the marginal effects (i.e., without controlling for attitude, see Table~\ref{tab:marginalANOVA})---their $\chi^2$s are reduced by 12\% and 39\%, respectively. This means that the mediation effect was substantial in all cases. The final mediation model is displayed in Figure~\ref{fig:mediationAllow}.
 
 
 \begin{table}
-\centering
-\caption{Effect of attitudes and scenario on allow/reject.}
-\label{tab:mediationANOVA}
-\begin{tabular}{ l | r | r | r | r }
-\hline
-Model & OR	&	\textbf{$\chi^2$} & $df$ & $p$-value 	\\ \hline
-$allow\sim(1 | sid)$ &	&		  &	    &				\\
-+risk &				0.25 &	1005.24  &    1 &		$<$ .0001 \\
-+comfort &			5.04 &	723.27  &     1 &		$<$ .0001 \\
-+appropriateness &	3.47 &	128.17  &	  1 & 		$<$ .0001 \\ \hline
-+who &					&	8.80	& 	  6 & 		.1851 	\\
-+what &					&	26.07 &	  	 23 &		.2976 	\\
-+reason &				&	19.33 & 	  5 & 		.0017	\\
-+persistence &			&	12.69 &	 	  1 & 		.0004 	\\
-\hline
-\end{tabular}
+	\centering
+	\caption{Effect of attitudes and scenario on allow/reject.}
+	\label{tab:mediationANOVA}
+	\begin{tabular}{ l | r | r | r | r }
+		\hline
+		Model & OR	&	\textbf{$\chi^2$} & $df$ & $p$-value 	\\ \hline
+		$allow\sim(1 | sid)$ &	&		  &	    &				\\
+		+risk &				0.25 &	1005.24  &    1 &		$<$ .0001 \\
+		+comfort &			5.04 &	723.27  &     1 &		$<$ .0001 \\
+		+appropriateness &	3.47 &	128.17  &	  1 & 		$<$ .0001 \\ \hline
+		+who &					&	8.80	& 	  6 & 		.1851 	\\
+		+what &					&	26.07 &	  	 23 &		.2976 	\\
+		+reason &				&	19.33 & 	  5 & 		.0017	\\
+		+persistence &			&	12.69 &	 	  1 & 		.0004 	\\
+		\hline
+	\end{tabular}
 \end{table}
 
 \begin{table}
-\centering
-\caption{Effect of scenario on allow/reject, \emph{not} controlling for attitudes.}
-\label{tab:marginalANOVA}
-\begin{tabular}{ l | r | r | r }
-\hline
-Model &	$\chi^2$ & $df$ & $p$-value 	\\ \hline
-$allow\sim(1 | sid)$ &		  	&	    &				\\
-+who &					221.36	& 	  6 & 		$<$ .0001 	\\
-+what &					78.55 &		  23 &		$<$ .0001 	\\
-+reason &				21.95 & 	  5 & 		  .0005		\\
-+persistence &			20.64 &		  1 & 		$<$ .0001 	\\
-\hline
-\end{tabular}
+	\centering
+	\caption{Effect of scenario on allow/reject, \emph{not} controlling for attitudes.}
+	\label{tab:marginalANOVA}
+	\begin{tabular}{ l | r | r | r }
+		\hline
+		Model &	$\chi^2$ & $df$ & $p$-value 	\\ \hline
+		$allow\sim(1 | sid)$ &		  	&	    &				\\
+		+who &					221.36	& 	  6 & 		$<$ .0001 	\\
+		+what &					78.55 &		  23 &		$<$ .0001 	\\
+		+reason &				21.95 & 	  5 & 		  .0005		\\
+		+persistence &			20.64 &		  1 & 		$<$ .0001 	\\
+		\hline
+	\end{tabular}
 \end{table}
 
 \begin{figure}
-\centering
-\includegraphics[width=0.45\textwidth]{figures/allow.pdf}
-\caption{Mediation model of the effect of scenario parameters on participants' intention to allow/reject the scenario, mediated by attitudinal factors}
-\label{fig:mediationAllow}
+	\centering
+	\includegraphics[width=0.45\textwidth]{figures/allow.pdf}
+	\caption{Mediation model of the effect of scenario parameters on participants' intention to allow/reject the scenario, mediated by attitudinal factors}
+	\label{fig:mediationAllow}
 \end{figure}
 
-\subsection{Discussion of Statistical Results}
+\subsubsection{Discussion of Statistical Results}
 Our statistical results show several patterns that can inform the development of an IoT privacy-setting interface. We find that \textbf{who} is the most important scenario parameter, and should thus end up at the top layer of our interface. People are generally concerned about IoT scenarios involving unknown and government devices, but less concerned about about data collected by their own devices. Mistrust of government data collection is in line with Li et al.'s finding regarding US audiences~\cite{li2017cross}.
 
 \textbf{What} is the next most important scenario parameter, and its significant interaction with \textbf{who} suggests that some users may want to allow/reject the collection of different types of data by different types of recipients. Privacy concerns are higher for photo and video than for voice, arguably because photos and videos are more likely to reveal the identity of a person. Moreover, people are less concerned with revealing their age and presence, and most concerned with revealing their identity.
