--- a/Proposal/chapter4.tex
+++ b/Proposal/chapter4.tex
@@ -1,9 +1,6 @@
 % !TeX root = proposal.tex
-\chapter{Recommending Privacy Perference for General IoT}
-In this chapter, we present the work completed to date in the areas of designing for privacy for general IoT.
-
-%\section{A Data-Driven Approach to Developing IoT Privacy-Setting Interfaces}
-In this section, we present the data-driven design, the dataset that we use, the inspection of users' behaviors using statistical analyses, prediction of users' behaviors using machine learning techniques, and the privacy-setting prototypes that we create based on both statistical and machine learning results.
+\chapter{Recommending Privacy Preference for General IoT}
+In this chapter, we present the work completed to date in the areas of recommending privacy preference for general IoT, including the data-driven design, the dataset that we use, the inspection of users' behaviors using statistical analyses, prediction of users' behaviors using machine learning techniques, and the privacy-setting prototypes that we create based on both statistical and machine learning results.
 
 \section{Data-driven design}
 What design process allows us to develop a usable privacy-setting interface for IoT? The development of usable privacy interfaces commonly relies on user studies with existing systems. However, this method is not possible in our IoT control scenario, because the Intel control framework has yet to be implemented~\cite{chow2015hci}. We therefore develop and employ a \emph{data-driven design} methodology, leveraging an existing dataset collected by Lee and Kobsa~\cite{lee2016understanding}, who asked users whether they would allow or deny IoT devices in their environment to collect information about them. We use this dataset in two phases. 
