--- a/Proposal/chapter5.tex
+++ b/Proposal/chapter5.tex
@@ -1,3 +1,3 @@
 % !TeX root = proposal.tex
 \chapter{Recommending Privacy Perference for Household IoT}
-In this chapter, we present the work completed to date in the areas of designing for privacy for Household IoT.
+In this chapter, we present the work completed to date in the areas of designing for privacy for Household IoT. We extend and improve upon the previously-developed data-driven approach to design privacy-setting interfaces for users of household IoT devices. 
