update in texstudio

--- a/Proposal/motivation.tex
+++ b/Proposal/motivation.tex
@@ -1,5 +1,5 @@
 % !TeX root = proposal.tex
-\chapter{Motivation}\label{motivation}
+\chapter{Motivation}\label{motivation}\label{chapter:Motivation}
 
 % Privacy is a big issue of adoption of new IoT technologies
 Privacy issues are the underlying obstacles to the adoption of social and mobile technologies. Privacy concerns have been identified as an important barrier to the growth of Internet of Things. 
