--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -26,6 +26,7 @@
 \usepackage{appendix}
 \usepackage{color}
 \usepackage{balance}
+\usepackage{arydshln}
 
 %
 % Make the document your own -- fill in these values to reflect the type of
