--- a/Proposal/relatedWork.tex
+++ b/Proposal/relatedWork.tex
@@ -1,5 +1,5 @@
 % !TeX root = proposal.tex
-\chapter{Related Work}
+\chapter{Related Work}\label{chapter:Relatedwork}
 In this chapter, we discuss existing research on privacy-setting interfaces and on privacy prediction.
 
 \subsection{Personalization in Iot Systems}
