--- a/Proposal/abstract.tex
+++ b/Proposal/abstract.tex
@@ -1,4 +1,4 @@
 % !TeX root = proposal.tex
 \chapter*{Abstract}
-Internet of Things (IoT) are more widely used recently, from general industrial equipment, to household electronics, to wearable devices. With IoT systems becoming more complex, users of IoT devices are paying more attention to their privacy, bringing new challenges to the privacy-setting interface designer. In this proposed dissertation, we focus on four of the most important challenges: (i). How to design privacy-setting interfaces for general IoT devices users? (ii) How to design privacy-setting interfaces for Household IoT devices users and how exactly does the ? (iii) How to design privacy-setting interfaces for Fitness tracker devices users? (iv). How satisfied are the user when they are using these privacy-setting interfaces? In this proposal, we focus on 
+%Internet of Things (IoT) are more widely used recently, from general industrial equipment, to household electronics, to wearable devices. With IoT systems becoming more complex, users of IoT devices are paying more attention to their privacy, bringing new challenges to the privacy-setting interface designer. In this proposed dissertation, we focus on four of the most important challenges: (i). How to design privacy-setting interfaces for general IoT devices users? (ii) How to design privacy-setting interfaces for Household IoT devices users and how exactly does the ? (iii) How to design privacy-setting interfaces for Fitness tracker devices users? (iv). How satisfied are the user when they are using these privacy-setting interfaces? In this proposal, we focus on 
 
