--- a/Proposal/introduction.tex
+++ b/Proposal/introduction.tex
@@ -1,5 +1,5 @@
 % !TeX root = proposal.tex
-\chapter{Introduction}
+\chapter{Motivation}\label{motivation}\label{chapter:Motivation}
 
 % Introduction of Definition of IoT
 Every passing day, our electronic device is getting smarter. It is no longer surprising that our refrigerator knows what food is stored inside it and notify us that we need to buy groceries when we start our car trying to go back home from work. Under the moniker of `Internet of Things` (IoT), smart connected devices are revolutionizing our everyday life. These smart devices ranging from personal devices~\cite{bahirat_exploring_2018,he_data_nodate} (e.g., fitness trackers, smart speakers, smart home appliances) to devices deployed in public areas and ``smart cities'' (e.g., smart billboards, RFID trackers, CCTV cameras)~\cite{bahirat2018data,lee_privacy_2017,pappachan_towards_2017}, are intended to collect information directly related to the users, such as fitness/healthy information, or the environment of users, such as users' home. A main feature of these smart devices, is that they are connected to a larger network of devices via local communication protocols and/or the Internet to create powerful new applications that supports our day-to-day activities. 
@@ -10,3 +10,14 @@ IoT is not a new word to normal users nowadays. Samsung's smart-things, Phillips
 % The rapid acceleration brings both opportunity and problems
 The rapid accelerating of the IoT brings a wealth of opportunity as well as risks. However, a lot of research has been focusing on the data and technology needs of the IoT -- the sensors, data, and the storage, security, and analysis of the data. However, research to an important aspect of IoT adoption and usage--the humans interacting with those technologies, are lacking. The demand for reducing the complexity and the burden in controlling these devices is urgent. Hence, my dissertation proposal research focuses on simplifying the task of controlling IoT devices for users using a data-driven design. People is bad at making decisions. This is also true in IoT privacy-setting domain [\textbf{need reference}]. To solve this problem, I use statistical analysis and machine learning to analyze how IoT device users make decisions regarding the privacy settings of their devices. Based on the insights gained from this analysis, I design intelligent User Interfaces to reduce the complexity of the privacy-setting user interface.
 
+% Privacy is a big issue of adoption of new IoT technologies
+Privacy issues are the underlying obstacles to the adoption of social and mobile technologies. Privacy concerns have been identified as an important barrier to the growth of Internet of Things. 
+
+% privacy paradox
+When the users are considering adopting the new IoT devices, they want to take the benefit of using those smart connected electronic devices by sharing and disclosing their certain personal information to get more personalized experience. However, such dis-closured information could be accessed by other smart devices owned by themselves, other people, organizations, government, or some third-parties with good or bad purpose, which will result in unknown risks to the users. Users have to make choices on what information that they want to disclose.
+
+Most Internet users take a pragmatic stance on information disclosure. They implicitly use a method called \textit{privacy calculus} to process their information disclosure decisions. They compare the perceived risks and anticipated benefit, and make decisions based on this risk-benefit analysis.
+
+However, as the increase of the diversity of IoT devices, it becomes more and more difficult to keep up with the many different ways in which data about ourselves is collected and disseminated. Although generally, users care about their privacy, few of them in practice find time to read the privacy policies or play around the privacy setting options that provided to them. There are several reasons leading to this problem: i) Users will think more of the benefit they will enjoy if they use the IoT devices or services than the potential risks if they disclose their information. ii) The privacy policies is too long, or the privacy setting of such devices are too complicated, making users irritated to finish reading/setting them. iii) As the rapid increment of numbers of IoT devices, the numbers and options of privacy setting for all the IoT devices are also increasing exponentially. This privacy-setting choice overload makes it difficult for IoT users to correctly and precisely make their decision to express their true demands. Thus, the main research question I propose to answer in my dissertation proposal is thus:
+
+\textbf{How can we help users simplify the task of controlling privacy setting for IoT devices in a user-friendly manner, so that they can make good privacy decisions?}
