--- a/Proposal/motivation.tex
+++ b/Proposal/motivation.tex
@@ -1,21 +1,8 @@
 % !TeX root = proposal.tex
-\chapter{Motivation}\label{motivation}\label{chapter:Motivation}
 
-% Privacy is a big issue of adoption of new IoT technologies
-Privacy issues are the underlying obstacles to the adoption of social and mobile technologies. Privacy concerns have been identified as an important barrier to the growth of Internet of Things. 
+\chapter{The Acceptability of IoT}
 
-% privacy paradox
-When the users are considering adopting the new IoT devices, they want to take the benefit of using those smart connected electronic devices by sharing and disclosing their certain personal information to get more personalized experience. However, such dis-closured information could be accessed by other smart devices owned by themselves, other people, organizations, government, or some third-parties with good or bad purpose, which will result in unknown risks to the users. Users have to make choices on what information that they want to disclose.
-
-Most Internet users take a pragmatic stance on information disclosure. They implicitly use a method called \textit{privacy calculus} to process their information disclosure decisions. They compare the perceived risks and anticipated benefit, and make decisions based on this risk-benefit analysis.
-
-However, as the increase of the diversity of IoT devices, it becomes more and more difficult to keep up with the many different ways in which data about ourselves is collected and disseminated. Although generally, users care about their privacy, few of them in practice find time to read the privacy policies or play around the privacy setting options that provided to them. There are several reasons leading to this problem: i) Users will think more of the benefit they will enjoy if they use the IoT devices or services than the potential risks if they disclose their information. ii) The privacy policies is too long, or the privacy setting of such devices are too complicated, making users irritated to finish reading/setting them. iii) As the rapid increment of numbers of IoT devices, the numbers and options of privacy setting for all the IoT devices are also increasing exponentially. This privacy-setting choice overload makes it difficult for IoT users to correctly and precisely make their decision to express their true demands. Thus, the main research question I propose to answer in my dissertation proposal is thus:
-
-
-                  \textbf{How can we help users simplify the task of controlling privacy setting for IoT devices in a user-friendly manner, 
-                  so that they can make good privacy decisions?}
-
-To answer this research question, we first conduct a preliminary user study based on interviews with potential users to understand the acceptability of IoT systems and devices. We interviewed 10 users with the demographics shown in Table~\ref{tab:demographics1}. The interviews are approximately 30-50 minutes in length and covered a wide range of open questions related to IoT. These questions need participants to input their personal preferences about technology and self-perceived tech savviness. We first recorded the entire conversation with the participants on the understanding that their anonymity was kept. The entire recorded conversation was then transcribed manually. We also tried to take note of other interpersonal cues, e.g. body language, as well. Keywords, such as privacy and ease of use, have been focused on. During the analysis, we extracted the key statement from our interviews and used card sorting and affinity diagram techniques to group the specific statements.
+To answer this research question, A preliminary user study based on interviews with potential users is conducted to understand the acceptability of IoT systems and devices. We interviewed 10 users with the demographics shown in Table~\ref{tab:demographics1}. The interviews are approximately 30-50 minutes in length and covered a wide range of open questions related to IoT. These questions need participants to input their personal preferences about technology and self-perceived tech savviness. We first recorded the entire conversation with the participants on the understanding that their anonymity was kept. The entire recorded conversation was then transcribed manually. We also tried to take note of other interpersonal cues, e.g. body language, as well. Keywords, such as privacy and ease of use, have been focused on. During the analysis, we extracted the key statement from our interviews and used card sorting and affinity diagram techniques to group the specific statements.
 
 \begin {table}
 \caption {Participants Demographics} \label{tab:demographics1}
@@ -53,12 +40,12 @@ In terms of privacy, the users primarily make judgements based on the trust they
 \begin{figure}
 	\centering
 	\includegraphics[width=0.6\columnwidth]{figures/AcceptingProcess.png}
-	\caption{Process of accepting IOT as observed}
+	\caption{Process of accepting IoT as observed}
 	\label{fig:AcceptingProcess}
 \end{figure}
 
 \section{IoT Privacy and Acceptability}
-In this section, we present the ralation between privacy concerns and the acceptability of IoT systems/devices. The most important thing central to any IoT systems/devices is that there exists a constant sharing of information during the usage of such systems/devices. For example, in an environment of Household IoT, a refrigerator can sense what are stored inside it and can notify users when they need to refill the groceries. The entire IoT systems are highly relying on such data collections and sharing in order to provide the best possible experience to the users. However, users may find some of these data collections to be intrusive in nature. The perceived risks from the data collection and sharing can be the main obstacle that users would adopt IoT systems/devices. As one of the participants mentioned that, ``As long as the privacy issue can be managed and the companies can be responsible in keeping encrypted data so that it can't be easily hacked and all that. As long as everybody is respecting that privacy. I love it." Therefore, we consider privacy is one of the most important key factors which users would decide on, prior to accepting a new technology.
+In this section, we present the relation between privacy concerns and the acceptability of IoT systems/devices. The most important thing central to any IoT systems/devices is that there exists a constant sharing of information during the usage of such systems/devices. For example, in an environment of Household IoT, a refrigerator can sense what are stored inside it and can notify users when they need to refill the groceries. The entire IoT systems are highly relying on such data collections and sharing in order to provide the best possible experience to the users. However, users may find some of these data collections to be intrusive in nature. The perceived risks from the data collection and sharing can be the main obstacle that users would adopt IoT systems/devices. As one of the participants mentioned that, ``As long as the privacy issue can be managed and the companies can be responsible in keeping encrypted data so that it can't be easily hacked and all that. As long as everybody is respecting that privacy. I love it." Therefore, we consider privacy is one of the most important key factors which users would decide on, prior to accepting a new technology.
 
 \subsection{Type of Information: \textit{What is collected/shared}}
 There are various types of information can be collected/shared in an IoT systems, such as location, photos, voice, and videos. From our interview, we observe that different types of information have different levels of importance to the user. For example, a user may perceive different privacy-related concerns when his/her photos or videos are shared. Below is an excerpt from an interview which highlights the importance of what information is collected/shared:\\
